--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,171 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-size: 18px;
+  background-color: #4158D0;
+  background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
+
+}
+/* navigation */
+.nav {
+  list-style-type: none;
+  display: flex;
+  justify-content: end;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+ul li {
+  margin: 4px;
+
+}
+
+ul li a {
+  font-size: 2em;
+}
+
+nav {
+
+  overflow: hidden;
+}
+
+nav a {
+  float: left;
+  display: block;
+  color: rgb(18, 17, 17);
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+
+}
+
+nav a:hover {
+  background-color: #d80fee;
+  color: black;
+}
+
+.active {
+  background-color: #4CAF50;
+  color: white;
+}
+/* home-section */
+#home {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+
+}
+
+#home h1 {
+  margin-bottom: 0.5rem;
+  font-size: 36px;
+  /* add some spacing between elements */
+}
+
+#home p {
+  margin-bottom: 1rem;
+}
+/* about-section */
+#about {
+  width: 90%;
+  margin: 5em;
+  height: 50%;
+  display: flex;
+}
+
+.about-description {
+  padding: 1em;
+  font-size: 1.5em;
+  text-align:end;
+}
+.jumbo-image {
+  border-radius: 60%;
+}
+/* project section */
+h3 {
+  font-size: 2em;
+}
+.project-description {
+  font-size: 1.5em;
+}
+.projects {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+#projects {
+  margin: 5em 3em;
+}
+
+.project {
+  flex: 1 1 600px;
+  margin: 10px;
+}
+
+.tech-stack p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.tech-stack svg {
+  width: 50px;
+  height: 50px;
+  margin:3px;
+  color: rgb(222, 229, 85);
+}
+
+.project-button {
+  display: inline-block;
+  margin: 10px;
+  padding: 10px 20px;
+  background-color: #eee;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: bold;
+  color: #333;
+  text-decoration: none;
+}
+
+
+/* contact-section */
+.form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+  max-width: 600px;
+}
+
+label {
+  margin-top: 16px;
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+input,
+textarea {
+  margin-top: 8px;
+  padding: 8px;
+  border: none;
+  border-radius: 4px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  font-size: 16px;
+  line-height: 24px;
+}
+
+button[type="submit"] {
+  margin-top: 16px;
+  padding: 8px 16px;
+  background-color: #ad2ddb;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+button[type="submit"]:hover {
+  background-color: #f0b206;
 }
